k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-demo-fe
  labels:
    app: k8s-demo-fe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-demo-fe
  template:
    metadata:
      labels:
        app: k8s-demo-fe
    spec:
      imagePullSecrets:
      - name: harbor-secret
      containers:
      - name: k8s-demo-fe
        image: reg.ospgroup.vn/demok8s/demo-fe:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 30
