k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-fe-service
  labels:
    app: k8s-demo-fe
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: k8s-demo-fe
