k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: k8s-demo-fe-route
  namespace: k8s-demo
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
  hostnames:
    - "common.ospgroup.vn"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /bttp/
      backendRefs:
        - name: k8s-demo-fe-service
          port: 3000
